# AniCode

./: .gitignore  README.md
AniCodeClient/: settings.gradle
AniCodeClient/app/: build.gradle
AniCodeClient/app/src/androidTest/java/com/example/anicodeclient/: ExampleInstrumentedTest.java
AniCodeClient/app/src/main/: AndroidManifest.xml
AniCodeClient/app/src/main/java/com/example/anicodeclient/: AniKeyFrame.java  MainActivity.java  MainView.java
AniCodeClient/app/src/main/res/layout/: activity_main.xml
AniCodeClient/app/src/main/res/values/: strings.xml  themes.xml
AniCodeClient/app/src/main/res/values-night/: themes.xml
AniCodeClient/app/src/test/java/com/example/anicodeclient/: ExampleUnitTest.java
AniCodeClient/gradle/wrapper/: gradle-wrapper.properties
AuthoringInterface/: README.md  requirements.txt  server.py
AuthoringInterface/AniCode-cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  animate  authorCapture.cpp  cmake_install.cmake  keyframe.cpp  main.cpp  match  segment  viewerCapture.cpp
AuthoringInterface/static/: main.js
AuthoringInterface/templates/: authoring.html  finish.html  index.html
